--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,8 @@ dependencies = [
     "aiohttp>=3.8.3",
     "setuptools>=67.7.2",
     "pre-commit>=3.3.3",
-    "numpy==1.23.3",
-    "jinja2==3.1.0"
+    "numpy>=1.23.3",
+    "jinja2>=3.1.0"
 ]
 
 [project.optional-dependencies]
